--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
     margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: black;
 }
 
 header {
@@ -31,6 +33,7 @@ h1 {
     font-size: 50px;
     font-weight: 900;
     letter-spacing: 15px;
+    color: #b0defd;
 }
 
 .btn a {
@@ -82,6 +85,21 @@ h3 {
     color: #c389f8;
 }
 
+.info p {
+    font-size: 25px;
+    margin: auto 20px;
+    line-height: 2em;
+    color: #b0defd;
+}
+
+.long {
+    font-weight: bolder;
+    font-size: 30px;
+    background: linear-gradient(90deg, rgb(250, 32, 217), rgb(250, 143, 239));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
 .blocSpan ul {
     display: flex;
     justify-content: center;
@@ -96,10 +114,10 @@ h3 {
     0% {
         color: #5B2C6F;
         text-shadow: none;
-        opacity: 0;
+        opacity: 0.5;
     }
     90% {
-        color: #ebc7fa;
+        color: #dfabf5;
         text-shadow: none;
     }
     100% {
@@ -154,14 +172,14 @@ h3 {
     position: absolute;
 }
 
-#telephone span {
+#telephone p {
     font-size: 12px;
     position: relative;
     letter-spacing: 1px;
     opacity: 0;
 }
 
-#telephone span:hover {
+#telephone p:hover {
     opacity: 1;
 }
 
@@ -237,11 +255,11 @@ h3 {
     border: 0px black solid;
     border-radius: 10px;
     overflow: hidden;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    box-shadow: 0 3px 6px rgba(159, 158, 158, 0.16), 0 3px 6px rgba(155, 155, 155, 0.23);
 }
 
 .projet:hover {
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    box-shadow: 0 14px 28px rgba(223, 222, 222, 0.25), 0 10px 10px rgba(243, 242, 242, 0.22);
     transition: 0.3s;
 }
 
@@ -280,7 +298,7 @@ h3 {
 .contacts i {
     margin: 20px;
     font-size: 35px;
-    color: #0e76a8;
+    color: #b4e5ff;
     padding: 15px;
 }
 
@@ -290,7 +308,6 @@ h3 {
 }
 
 footer {
-    background-color: #8509fa;
     color: white;
     padding: 15px;
     text-align: center;
